# PRIMORDIAL

./: .gitignore  AGENTS.md  AUTONOMOUS_RUNTIME_TEST_REPORT.md  HELIX_RUNTIME_TEST_REPORT.md  PLANS.md  PROJECT_COMPLEXITY_REPORT.md  README.md  TEMP-worth-pulling-from-n8n.md  TODO-real-v1.md  ai-agent-current-context.md  ai-agent-prd.md  ai-tuning.md  cli.py  codex-goal.instruct  codex_primordial_OLLAMA-model_role_benchmark_20260509.md  codex_primordial_model_role_benchmark_20260509.md  package-lock.json  package.json  prompt.goal  pyproject.toml  quick-complexity-notes.md  vite.config.mjs
primordial-rag-preprocess/: AGENTS.md  README.md  pyproject.toml  requirements.txt
primordial-rag-preprocess/config/: agent_policy.yaml  corpus_policy.yaml  pipeline_manifest.yaml  source_overrides.example.yaml  vendor_advisory_sources.example.yaml  vuln_stream.yaml
primordial-rag-preprocess/primordial_preprocess/: __init__.py  agent_policy.py  chunking.py  classification.py  cleaning.py  config.py  epub_convert.py  filetypes.py  hashing.py  inventory.py  manifest.py  metadata.py  models.py  pipeline.py  pipeline_manifest.py  policy.py  profile_extract.py  validation.py
primordial-rag-preprocess/scripts/: build_manifest.py  chunk_corpus.py  classify_sources.py  extract_profiles.py  extract_text.py  inventory_corpus.py  parse_attack_json.py  run_pipeline.py  run_vuln_stream.py  validate_outputs.py
primordial-rag-preprocess/tests/: test_attack_parser.py  test_chunking.py  test_classification.py  test_docling_extraction.py  test_docling_hybrid_chunking.py  test_epub_convert.py  (+4 more)
(+1337 files in other folders)
